--- a/src/main/java/mtitek/swagger/sample/uber.yaml
+++ b/src/main/java/mtitek/swagger/sample/uber.yaml
@@ -11,7 +11,7 @@ host: api.uber.com
 schemes:
   - https
 # will be prefixed to all paths
-basePath: /v1
+basePath: /v134kj34rr
 securityDefinitions:
   apikey:
     type: apiKey
@@ -20,7 +20,7 @@ securityDefinitions:
 produces:
   - application/json
 paths:
-  /products:
+  /v134kj34rr/producdstsdeddrhjjtsdeddrhjj:
     get:
       summary: Product Types
       description: The Products endpoint returns information about the Uber products offered at a given location. The response includes the display name and other details about each product, and lists the products in the proper display order.
@@ -52,7 +52,7 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /estimates/price:
+  /blablabla:
     get:
       summary: Price Estimates
       description: The Price Estimates endpoint returns an estimated price range for each product offered at a given location. The price estimate is provided as a formatted string with the full price range and the localized currency symbol.<br><br>The response also includes low and high estimates, and the [ISO 4217](http://en.wikipedia.org/wiki/ISO_4217) currency code for situations requiring currency conversion. When surge is active for a particular product, its surge_multiplier will be greater than 1, but the price estimate already factors in this multiplier.
